--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,31 +1,37 @@
 services:
   app:
+    build:
+      dockerfile: dockerfile
+      context: .
     ports:
-      - "8080:8080"
+      - "3000:3000"
+    expose:
+      - "3000"
+    env_file: .env
     depends_on:
       - postgres
       - redis
-    environment:
-      - SERVER_PORT=8080
-      - DB_URL=
-      - JWT_SECRET=
-      - RedisAddr=
-      - RedisPwd=
   postgres:
-    image: postgres:14
-    restart: always
+    image: postgres:14-alpine
     environment:
-      POSTGRES_USER: yourusername
-      POSTGRES_PASSWORD: yourpassword
-      POSTGRES_DB: yourdbname
+      POSTGRES_USER: smolurl
+      POSTGRES_PASSWORD: smolurl
+      POSTGRES_DB: smolurl
     ports:
       - "5432:5432"
+    expose:
+      - "5432"
     volumes:
       - postgres-data:/var/lib/postgresql/data
   redis:
     image: redis:7
-    restart: always
     ports:
       - "6379:6379"
+    expose:
+      - "6379"
     volumes:
       - redis-data:/data
+
+volumes:
+  postgres-data:
+  redis-data:
